<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_space"
    android:id="@+id/holder"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/small_space">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvStartPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/start_point"
            android:textSize="20sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvEndPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_space"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/end_point"
            android:textSize="20sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_space"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/distance_m"
            android:textSize="20sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_space"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/date"
            android:textSize="20sp" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>