<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.CreateDistanceFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_space"
            android:layout_marginTop="@dimen/normal_space"
            android:layout_marginBottom="@dimen/big_space"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/choose_points"
                android:textSize="32sp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_space" />

            <!-- Start point-->

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvStartPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_space"
                android:text="@string/start_point"
                android:textSize="25sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLat1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_space">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLat1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="16"
                    android:hint="@string/lat"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLon1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_space">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLon1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="16"
                    android:hint="@string/lat"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_space"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bRandom1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/randomize"
                    android:textAllCaps="false" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bOpenMap1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_space"
                    android:text="@string/display_on_map"
                    android:textAllCaps="false" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- End point-->

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvEndPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_space"
                android:text="@string/end_point"
                android:textSize="25sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLat2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_space">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLat2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="16"
                    android:hint="@string/lat"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLon2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_space">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLon2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="16"
                    android:hint="@string/lat"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_space"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bRandom2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/randomize"
                    android:textAllCaps="false" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bOpenMap2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_space"
                    android:text="@string/display_on_map"
                    android:textAllCaps="false" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- Next btn-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/big_space"
                android:alpha="0.5"
                android:text="@string/next"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>