<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.DistanceInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <ImageView
                android:id="@+id/iMap"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- From-->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvStartPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/normal_space"
                android:layout_marginTop="@dimen/normal_space"
                android:text="@string/start_point"
                android:textSize="36sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvFullName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/normal_space"
                android:layout_marginTop="@dimen/normal_space"
                android:text="Location name"
                android:textSize="25sp" />


            <!-- lat-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llcLat1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/normal_space">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.4"
                    android:text="@string/lat_info"
                    android:textSize="20sp" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvLat1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/small_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.7"
                    android:text="123.123"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <!-- lon-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llcLon1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/normal_space">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.4"
                    android:text="@string/lon_info"
                    android:textSize="20sp" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvLon1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/small_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.7"
                    android:text="123.123"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <!-- country-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llcCountry1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/normal_space">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.4"
                    android:text="@string/county_info"
                    android:textSize="20sp" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvCountry1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/small_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.7"
                    android:text="123.123"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <!-- city-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llcCity1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/normal_space">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.4"
                    android:text="@string/state_info"
                    android:textSize="20sp" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvCity1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/small_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.7"
                    android:text="123.123"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- to-->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvEndPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/normal_space"
                android:layout_marginTop="@dimen/normal_space"
                android:text="@string/end_point"
                android:textSize="36sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvFullName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/normal_space"
                android:layout_marginTop="@dimen/normal_space"
                android:text="Location name"
                android:textSize="25sp" />
            <!-- lat-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llcLat2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/normal_space">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.4"
                    android:text="@string/lat_info"
                    android:textSize="20sp" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvLat2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/small_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.7"
                    android:text="123.123"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <!-- lon-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llcLon2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/normal_space">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.4"
                    android:text="@string/lon_info"
                    android:textSize="20sp" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvLon2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/small_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.7"
                    android:text="123.123"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <!-- country-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llcCountry2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/normal_space">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.4"
                    android:text="@string/county_info"
                    android:textSize="20sp" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvCountry2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/small_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.7"
                    android:text="123.123"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <!-- city-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llcCity2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/normal_space">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.4"
                    android:text="@string/state_info"
                    android:textSize="20sp" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvCity2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/small_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.7"
                    android:text="123.123"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- Data-->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/normal_space"
                android:layout_marginTop="@dimen/normal_space"
                android:text="@string/info"
                android:textSize="36sp" />

            <!-- m-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/normal_space">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.4"
                    android:text="@string/distance_m"
                    android:textSize="20sp" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDistanceM"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/small_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.7"
                    android:text="123.123"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <!-- km-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/normal_space">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.4"
                    android:text="@string/distance_km"
                    android:textSize="20sp" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDistanceKM"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/small_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.7"
                    android:text="123.123"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <!-- create date-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/normal_space">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.4"
                    android:text="@string/date"
                    android:textSize="20sp" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/small_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:layout_weight="0.7"
                    android:text="123.123"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bOk"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/big_space"
        android:text="@string/ok"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
